welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:4: error: type mismatch;
 found   : Unit
 required: Int
    for (compteur <-1 to nbPas){
                  ^Program:3: error: type mismatch;
 found   : Unit
 required: Int
  if (versLAvant == true){
  ^