welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def pove(nbPas:Int,versLAvant:Boolean):Int={
  if (versLAvant == true){
    for (compteur <-1 to nbPas){
      avance()
    }
  }
}